--- a/index.html
+++ b/index.html
@@ -2,20 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:widget="http://www.netvibes.com/ns/">
 <head>
-    <script>
-        require(["DS/MyWidget/scripts/MyWidget"],function(mywidget){
-                 widget.addEvent("onLoad",mywidget.onLoadWidget);
-             });
-     </script>
-</head>
-<body>
-
-</body>
-</html>
-<?xml version="1.0" encoding="utf-8"?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:widget="http://www.netvibes.com/ns/">
-<head>
     <title>My Widget</title>
 
     <!-- Load RequireJS -->
@@ -35,8 +21,12 @@
         // Load and initialize widget
         require(["DS/MyWidget/scripts/MyWidget"], function (myWidget) {
             // No need to call onLoad here if it's already registered via widget.addEvent in the module
-           widget.addEvent("onLoad",mywidget.onLoadWidget);
-		   console.log("Widget loaded");
+		console.log("Widget loadeing started");
+
+        widget.addEvent("onLoad",mywidget.onLoadWidget);
+		   
+		console.log("Widget loadeing Completed");
+
         });
     </script>
 </head>
